# CuckooFilter

./: .gitignore  BitManager.cpp  CMakeLists.txt  CuckooFilter.cpp  CuckooFilter.h  CuckooHash.cpp  CuckooHash.h  CuckooTable.cpp  CuckooTable.h  Filter.cpp  LICENSE  README.md  Table.cpp  main.cpp
CF/: BitManager.h  CuckooFilter.cpp  CuckooFilter.h  CuckooTable.cpp  CuckooTable.h  Filter.cpp  HashFunction.cpp  HashFunction.h  Table.cpp  cuckoo_filter.h  cuckoo_table.h  hash.cpp  main.cpp
DCF/: BitManager.cpp  CuckooFilter.cpp  CuckooFilter.h  CuckooTable.cpp  CuckooTable.h  DynamicCuckooFilter.cpp  DynamicCuckooFilter.h  DynamicFilter.cpp  Filter.cpp  HashFunction.cpp  HashFunction.h  Table.cpp  cuckoo_filter.h  cuckoo_table.h  dynamic_cuckoo_filter.h  hash.cpp
Data/: ecoli_small.fna
Data/random/: random_ecoli_kmers_10.txt  random_ecoli_kmers_100.txt  random_ecoli_small_kmers_10.txt  random_ecoli_small_kmers_100.txt  random_ecoli_small_kmers_1000.txt
Demo/: cf_demo.cpp  dcf_demo.cpp
FASTA/: FastaIterator.cpp  FastaIterator.h  FastaReader.cpp  FastaTest.cpp  fasta_iterator.cpp  fasta_iterator.h  fasta_reader.cpp  fasta_reader.h
Tests/: FastaDynamicTest.cc  SimpleDynamicTest.cpp  SimpleFastaTest.cpp  SimpleTest.cpp  cf_fasta_test.cpp  dynamic_cuckoo_test.cpp  fasta_dynamic_test.cc  simple_dynamic_test.cpp  simple_fasta_test.cpp  simple_test.cpp
Utils/: BitManager.cpp  HashFunction.cpp  bit_manager.cpp  bit_manager.h  city_hash.cpp  hash_function.cpp  hash_function.h  murmur_hash3.cpp  util.h
